<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/action_bar"
        android:id="@+id/editFlower_appBar" />

    <ImageView
        android:id="@+id/editFlower_imageView_flower"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/editFlower_appBar"
        android:contentDescription="@string/content_description_flower_image"/>


    <TextView
        android:id="@+id/editFlower_textView_addWatering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFlower_imageView_flower"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:text="@string/add_watering_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#0000e5" />

    <LinearLayout
        android:id="@+id/editFlower_linearLayout_wateringInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editFlower_imageView_flower"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:visibility="gone">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/table_background" >

            <TableRow
                android:background="?android:colorBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                >

                <TextView
                    android:text="@string/watering_info" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                >

                <TextView
                    android:text="@string/next_date" />

                <TextView
                    android:text="@string/row_space"
                    android:textColor="#000"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:text="@string/previous_date"
                    android:paddingStart="0dp"
                    android:paddingEnd="10dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground"
                android:layout_marginBottom="1dp">

                <TextView
                    android:id="@+id/editFlower_textView_nextWatering"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/row_space"
                    android:textColor="#000"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:id="@+id/editFlower_textView_previousWatering"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/editFlower_textView_changeWatering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:text="@string/change"
            android:textColor="#0000e5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editFlower_linearLayout_suns"
        android:layout_below="@+id/editFlower_textView_addWatering"
        android:layout_alignWithParentIfMissing="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/image_sun1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_sun"
            android:contentDescription="@string/content_description_drawable_sun"/>

        <ImageView
            android:id="@+id/image_sun2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_sun"
            android:alpha="0.5"
            android:contentDescription="@string/content_description_drawable_sun"/>

        <ImageView
            android:id="@+id/image_sun3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_sun"
            android:alpha="0.5"
            android:contentDescription="@string/content_description_drawable_sun"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editFlower_linearLayout_drops"
        android:layout_below="@+id/editFlower_linearLayout_suns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/image_drop1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_water_drop"
            android:contentDescription="@string/content_description_drawable_water_drop"/>

        <ImageView
            android:id="@+id/image_drop2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_water_drop"
            android:alpha="0.4"
            android:contentDescription="@string/content_description_drawable_water_drop"/>

        <ImageView
            android:id="@+id/image_drop3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_water_drop"
            android:alpha="0.4"
            android:contentDescription="@string/content_description_drawable_water_drop"/>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="Lisää muistiinpanoja..."
        android:layout_below="@id/editFlower_linearLayout_drops"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/button_change_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Muuta tietoja" />


</RelativeLayout>